--- a/index.html
+++ b/index.html
@@ -81,3 +81,71 @@ a agenda<!DOCTYPE html>
         <img src="foto3.jpg" alt="Foto da Banda 3" class="gallery-image">
     </div>
 </section>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Theodor Metalcore - Home</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Theodor Metalcore</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="discografia.html">Discografia</a></li>
+                <li><a href="shows.html">Shows</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="hero">
+            <h2>Site oficial!</h2>
+            <p>Conheça mais sobre nossa música e nossos próximos shows.</p>
+            <img src="imagens/Image.JPG" alt="Theodor Metalcore" class="hero-image">
+        </section>
+
+        <section id="galeria">
+            <h2>Galeria de Fotos</h2>
+            <div class="gallery">
+                <img src="imagens/Image.JPG" alt="Foto 1">
+                <img src="imagens/Image(1).JPG" alt="Foto 2">
+                <img src="imagens/Image(2).JPG" alt="Foto 3">
+                <!-- Adicione mais imagens conforme necessário -->
+            </div>
+        </section>
+        
+        <section id="videos">
+            <h2>Vídeos</h2>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CÓDIGO_DO_VIDEO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+
+        <section id="novidades">
+            <h2>Últimas Novidades</h2>
+            <article>
+                <h3>Novo Single Lançado!</h3>
+                <p>Nosso mais recente trabalho já está disponível nas plataformas digitais.</p>
+                <a href="https://www.youtube.com/watch?v=fuxQym3z_kI" target="_blank">Assista no YouTube</a>
+            </article>
+            <article>
+                <h3>Agenda 2024 Anunciada!</h3>
+                <p>Confira as datas e locais dos Proximos Shows.</p>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Theodor Metalcore. Todos os direitos reservados.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
