--- a/index.html
+++ b/index.html
@@ -149,3 +149,8 @@ a agenda<!DOCTYPE html>
     <script src="script.js"></script>
 </body>
 </html>
+<div class="gallery">
+    <img src="imagens/Imagem01.JPG" alt="Foto da Banda 1">
+    <img src="imagens/Imagem02.JPG" alt="Foto da Banda 2">
+    <img src="imagens/Imagem03.JPG" alt="Foto da Banda 3">
+</div>
