--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
             </div>
         </section>
 
+        <section id="videos">
+            <h2>Vídeos</h2>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kJXH8CWoAmU" title="Vídeo 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/v1RuUpOu0SA" title="Vídeo 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5HNrIWyw--k" title="Vídeo 3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+
         <section id="novidades">
             <h2>Últimas Novidades</h2>
             <article>
@@ -57,4 +66,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
